Fix #848: Enforce Java 8